# text-forge

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/: copilot-instructions.md
.github/skills/check-i18n/: SKILL.md
.github/skills/check-i18n/references/: example_translations.json  test_cases.md
.github/skills/check-i18n/scripts/: check_i18n.py
.github/workflows/: publish-pypi.yml
docs/: hindsight-memory.md
docs/hindsight-memory/: SKILL.md
epub/: book_meta.yml  epub.css
examples/: content-repo-publish.yml
mkdocs/hooks/: nobr_emoticons.py
mkdocs/overrides/: main.html
mkdocs/overrides/assets/js/: editor.js  translations.json
mkdocs/overrides/assets/stylesheets/: editor.css  text-forge.css
mkdocs/overrides/partials/: comments.html  downloads.html  editor.html  header.html  source-file.html
scripts/: check_i18n.py  conftest.py  hindsight-ingest.py  mkdocs-combine.py  mkdocs_common.py  process-epub-meta.py  pymdown-pandoc.lua  tests.py  wtd-inventory.py
scripts/fixtures/: ptn_combined_heading.md  ptn_lua_admonition.md  ptn_lua_image.md
tests/: conftest.py  test_hindsight_ingest.py  test_pipeline.py
tests/fixtures/expected/: pandoc.md  text_combined.txt
tests/fixtures/input/: mkdocs.yml
tests/fixtures/input/docs/: chapter1.md  chapter2.md  index.md
text_forge/: __init__.py  build.py  cli.py  plugin.py
text_forge/obsidian/scripts/: insert_block.js
