[project]
name = "text-forge"
version = "0.0.0"
description = "Reusable build/publish pipeline for Markdown chapter collections"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mkdocs", "mkdocs-plugin", "epub", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Keep in sync with content repos that use this pipeline.
    # Remove after fix of https://github.com/mkdocs/mkdocs/issues/4032
    "click>=8.1.7,<8.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    # `mkdocs serve` runtime
    "livereload>=2.7.1",
    # mkdocs.yml uses !ENV tags
    "pyyaml>=6.0.3",
]

[project.entry-points."mkdocs.plugins"]
"text-forge" = "text_forge.plugin:TextForgePlugin"

[project.scripts]
text-forge = "text_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_forge"]

[tool.hatch.build.targets.wheel.shared-data]
"mkdocs/overrides" = "share/text-forge/mkdocs/overrides"
"mkdocs/hooks" = "share/text-forge/mkdocs/hooks"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
