[project]
name = "sg-text-forge"
version = "0.1.4"
description = "MkDocs plugin and build pipeline for Markdown text projects with EPUB generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Bongiozzo", email = "sergey.polyakov@hotmail.com"},
]
maintainers = [
    {name = "Bongiozzo", email = "sergey.polyakov@hotmail.com"},
]
keywords = ["mkdocs", "mkdocs-plugin", "epub", "markdown", "publishing", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    # Keep in sync with content repos that use this pipeline.
    # Remove after fix of https://github.com/mkdocs/mkdocs/issues/4032
    "click>=8.1.7,<8.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    # `mkdocs serve` runtime
    "livereload>=2.7.1",
    # mkdocs.yml uses !ENV tags
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/shared-goals/text-forge"
Repository = "https://github.com/shared-goals/text-forge"
Issues = "https://github.com/shared-goals/text-forge/issues"
Documentation = "https://github.com/shared-goals/text-forge#readme"

[project.entry-points."mkdocs.plugins"]
"text-forge" = "text_forge.plugin:TextForgePlugin"

[project.scripts]
text-forge = "text_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_forge"]

[tool.hatch.build.targets.wheel.shared-data]
"mkdocs/overrides" = "share/text-forge/mkdocs/overrides"
"mkdocs/hooks" = "share/text-forge/mkdocs/hooks"
"scripts" = "share/text-forge/scripts"
"epub" = "share/text-forge/epub"

[tool.hatch.build.targets.wheel.force-include]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "whattodo/",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
